--- a/frontend/src/Components/MainPage/MainPage.css
+++ b/frontend/src/Components/MainPage/MainPage.css
@@ -6,3 +6,8 @@
     align-items: center;
     justify-content: center;
 }
+
+@media only screen and(max-width: 800px)
+{
+
+}
