--- a/frontend/src/Components/Search/Search.css
+++ b/frontend/src/Components/Search/Search.css
@@ -1,5 +1,5 @@
 .searchContainer{
-    max-width: 80% !important;
+    max-width: 85% !important;
 }
 .searchBar{
     margin-bottom: 10px !important;
